# modular-framework

./: .env  .env.example  .gitignore  AUTH_README.md  Dockerfile  NEXT_README.md  NO_CORE_CHANGE_UI_README.md  README.md  README.txt  README_APPLY.md  README_APPLY.txt  README_NO_EXCUSES.md  README_UI.md  apply_patch.py  apply_patch_no_excuses.py  apply_patch_ui.py  gitpush.bat  policy_guard.py  pyproject.toml  pyproject_add_only.txt  requirements.txt  run_gui.command  start.py
.github/workflows/: ci.yml  guard.yml
auth/login/: handler.py
auth/users/: handler.py
components/: JsonCard.tsx
compose/: docker-compose.yml
core/: contract.py  errors.py  interceptor.py  jwt_utils.py  ratelimit.py  registry.py  registry_hotload.py  runner.py  secret_store.py  security.py  telemetry.py
data/: .jwt_secret  .secrets_key  app.db  banks.json  demo_accounts.json  kist_222ec7d2094c741ee5db1f3ff5ade618.json  secrets.enc
db/: README.md  sqlite.py
db/sql/: runner.py
db/tables/: job_defs.py  job_runs.py  job_schedules.py  job_tasks.py
jobs/: README.md  scheduler.py  worker.py
modules/auth/: _store.py
modules/auth/login/: __init__.py  handler.py  manifest.yaml
modules/auth/me/: __init__.py  manifest.yaml
pages/: _app.tsx  auth_main.py  dashboard_main.py  demo_main.py  kisdiag.tsx  ops_main.py
public/: kisdiag-launcher.js
server/: account_route.txt  diagnostics.py  kis_diag.py  main.py
tools/: diag_env.py  kis_diag_cli.py
ui/: README.md  account.html  auth.html  dev_launcher.py
ui_web/: app.py
ui_web/static/: app.js  index.html  style.css
(+68 files in other folders)
